# wolfssl-kt

./: generate-ca-chain.sh  generate-leaf-cert.sh  settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/tech/medina/wolfssl_kt/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/assets/tls/wolfsslkt-chain/: ca-chain.pem  client-cert.pem  client-fullchain.pem  client-key.pem  client.csr.pem  intermediate-ca.srl  intermediate-chain.pem  intermediate-key.pem  intermediate.csr.pem  root-ca.srl  root-cert.pem  root-key.pem  server-cert.pem  server-fullchain.pem  server-key.pem  server.csr.pem
app/src/main/java/tech/medina/wolfssl_kt/: App.kt  MainActivity.kt
app/src/main/java/tech/medina/wolfssl_kt/bluetooth/: BleTransport.kt  BluetoothGattProfile.kt  BluetoothLeClientConnectionManager.kt  BluetoothLeConnectionManager.kt  BluetoothLeServerConnectionManager.kt  BluetoothProvider.kt
app/src/main/java/tech/medina/wolfssl_kt/tls/: TlsMaterialProvider.kt
app/src/main/java/tech/medina/wolfssl_kt/ui/client/: ClientScreen.kt  ClientViewModel.kt
app/src/main/java/tech/medina/wolfssl_kt/ui/dashboard/: DashboardFragment.kt  DashboardScreen.kt  DashboardViewModel.kt
app/src/main/java/tech/medina/wolfssl_kt/ui/home/: HomeFragment.kt  HomeScreen.kt  HomeViewModel.kt
app/src/main/java/tech/medina/wolfssl_kt/ui/notifications/: NotificationsFragment.kt  NotificationsScreen.kt  NotificationsViewModel.kt
app/src/main/java/tech/medina/wolfssl_kt/ui/server/: ServerScreen.kt  ServerViewModel.kt
app/src/main/res/layout/: fragment_home.xml
app/src/main/res/navigation/: mobile_navigation.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/tech/medina/wolfssl_kt/: ExampleUnitTest.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
wolfssl-kt/: build.gradle.kts
wolfssl-kt/libs/: CMakeLists.txt
wolfssl-kt/libs/wolfssl-5.8.4/: Makefile.in  aclocal.m4  config.in  configure
wolfssl-kt/libs/wolfssl-5.8.4/IDE/INTIME-RTOS/: wolfssl-lib.vcxproj
wolfssl-kt/libs/wolfssl-5.8.4/IDE/Renesas/e2studio/RA6M3/benchmark-wolfcrypt/: .cproject
wolfssl-kt/libs/wolfssl-5.8.4/IDE/Renesas/e2studio/RA6M3/client-wolfssl/: .cproject
wolfssl-kt/libs/wolfssl-5.8.4/IDE/Renesas/e2studio/RA6M3/server-wolfssl/: .cproject
wolfssl-kt/libs/wolfssl-5.8.4/IDE/Renesas/e2studio/RA6M3/test-wolfcrypt/: .cproject
wolfssl-kt/libs/wolfssl-5.8.4/IDE/Renesas/e2studio/RA6M3/wolfssl/: .cproject
wolfssl-kt/libs/wolfssl-5.8.4/IDE/XilinxSDK/2019_2/wolfCrypt_example/: .project
wolfssl-kt/libs/wolfssl-5.8.4/support/: wolfssl.pc
wolfssl-kt/libs/wolfssl-5.8.4/wrapper/CSharp/wolfSSL_CSharp/: wolfCrypt.cs
wolfssl-kt/src/androidTest/java/tech/medina/wolfssl/kt/: ExampleInstrumentedTest.kt
wolfssl-kt/src/main/java/tech/medina/wolfssl/kt/: PKIData.kt  Utils.kt  WolfSSLKt.kt  WolfSSLKtSendCallback.kt  WolfSslKt.kt
wolfssl-kt/src/test/java/tech/medina/wolfssl/kt/: ExampleUnitTest.kt
